# pivagen

./: README.md
.github/workflows/: testing.yml
backend/: Cargo.toml
backend/src/: main.rs  pivagen.rs
frontends/: Cargo.toml
frontends/cli/: Cargo.toml
frontends/cli/src/: main.rs
frontends/src/: protocol.rs
frontends/telegram/: Cargo.toml
frontends/telegram/src/: main.rs
frontends/vk/: Cargo.toml
frontends/vk/src/: api.rs  main.rs  metrics.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  request.rs  traits.rs
protocol/src/asyncio/: mod.rs  traits.rs
protocol/src/sync/: mod.rs  traits.rs
