[package]
name = "backend"
version = "0.1.0"
authors = ["Termonoid <termonoid@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messages_generator = { git = "https://github.com/Termonoid/messages-generator.git" }
protocol = { path = "../protocol/", features = ["async"]}
tokio = { version="1", features=["net", "rt", "macros"]}

[profile.release]
lto = true
codegen-units = 1
strip = true
