[package]
name = "frontends"
version = "0.1.0"
authors = ["Termonoid <termonoid@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.8"
