[package]
name = "telegram"
version = "0.1.0"
authors = ["Termonoid <termonoid@yandex.ru>"]
edition = "2018"
publish = false

[dependencies]
teloxide = "0.9"
rand = "0.7"
tokio = { version = "1", features = ["rt", "macros"] }
protocol = { path = "../../protocol/", features = ["async"] }
thiserror = "1"
