[package]
name = "vk"
version = "0.1.0"
authors = ["Termonoid <termonoid@yandex.ru>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1.8", features=["macros", "rt", "net"]}
tokio-postgres = "0.7"
lazy_static = "1"
serde = { version = "1.0", features=["derive"] }
serde_json = "1"
rand = "*"
protocol = { path = "../../protocol/", features = ["async"] }
